fix spacing

--- a/container.css
+++ b/container.css
@@ -5,8 +5,8 @@
 }
 
 .super-content {
-    padding-bottom: 60px !important;
-    padding-top: 60px !important;
+    padding-bottom: 10px !important;
+    padding-top: 10px !important;
 }
 
 @media (max-width: 600px) {
