--- a/header.css
+++ b/header.css
@@ -3,6 +3,6 @@
 }
 
 .notion-header__cover.no-cover {
-    max-height: 100px !important;
-    height: 100px !important;
+    max-height: 60px !important;
+    height: 60px !important;
 }
