--- a/typography.css
+++ b/typography.css
@@ -1,5 +1,5 @@
 h1 {
-    padding-bottom: 40px !important;
+    padding-bottom: 0px !important;
     letter-spacing: -2px !important;
     font-weight: 500 !important;
     line-height: 1.4 !important;
